Lucas + Julius. Ändrade endpoint för preferedGender